# summer_school_world

./: CMakeLists.txt  README.md  package.xml
docker/: Dockerfile  entrypoint.sh
include/summer_school_world/: common_operations.h  pid_controller.h  vel_controller.h
launch/: world_map.launch
models/urdf/: pipe.xacro
resources/: pid_pelican.yaml  vel_pelican.yaml
src/libs/: pid_controller.cpp  vel_controller.cpp
src/nodes/: pid_node.cpp  pid_node.h  vel_node.cpp  vel_node.h
src/scripts/: command_server.py  downlink_delay.py  odometry_client.py  random_delay.py
